Changelog Acumulus web shop extensions
======================================

This file contains a historical overview of changes in our own code.

8.1.2 (2024-05-??) (PS)
-----------------------
Bugs:
- ALL: NOTICE ...\Collector::expandAndSet: Siel\Acumulus\Data\EmailInvoiceAsPdf does not
  have a property emailAsPdfType, nor is it considered metadata.

Refactorings:
- PS: Implemented the new "collect-complete architecture" for PrestaShop.
- PS: Use Version::VERSION as version, not the indirect _PS_VERSION_ or AppKernel::VERSION.
- ALL: Renamed some meta keys (key + string value).

8.1.1 (2024-01-04) (WC)
-----------------------
NOTE: code changes are breaking backwards compatibility, but as the changed methods are
  only called form within the library this may only be a problem with custom code.

Bugs:
- WC: Metadata in in-memory Order object does not get updated when AcumulusEntry metadata
  is updated or deleted. Acumulus status meta box does not get updated after clicking the
  "Send Now" button, even while the data has been successfully sent to Acumulus.


8.1.0 (2024-01-03) (JOO, WC)
----------------------------
Features:
- WC: We now support HPOS.

Bugs:
- JOO: Message on uninstall: com_acumulusInstallerScript::preflight(): Argument #2
  ($parent) must be of type Joomla\CMS\Installer\Adapter\ComponentAdapter,
  Joomla\CMS\Installer\Adapter\PluginAdapter given.

Refactorings:
- JOO: Implemented the new "collect-complete architecture" for VirtueMart and HikaShop.


8.0.2 (2023-09-21) (MA+WC)
--------------------------
Bugs:
- WC: Typo in default mapping for field VatNumber: Vat Number instead of VAT Number for
  WooCommerce EU/UK VAT Compliance plugin.
- MA 2.4.6: The Zend_Mail framework has been removed in favor of the Laminas mail library.
- MA: Form values were not set for elements with different id and name (array style name).
- MA: Radio options with an "empty" value (e.g. 0 or "0") did not have their button
  rendered.